# Gaussian-Color-Adjust

./: .gitignore  GUIDE.md  HOWTO.md  README.md  pyproject.toml  requirements.txt  requirements_rocm.txt
diffusion/: __init__.py  editor.py
gaussadj/: cli.py
scripts/: edit_images.py  fit_colors.py  render_scene.py  test_gsplat_minimal.py
tests/: conftest.py  test_color_fitter.py  test_device.py  test_editor.py  test_ply_io.py  test_renderer.py
training/: __init__.py  color_fitter.py
utils/: __init__.py  cameras_from_colmap.py  device.py  ply_io.py  renderer.py
